test/libsolidity/syntaxTests/nameAndTypeResolution/282_invalid_different_types_for_conditional_expression.sol
contract C {
    function f() public {
        true ? true : 2;
    }
}
// ----
// TypeError: (47-62): True expression's type bool doesn't match false expression's type uint8.
